Memory free problem when console area copy fail #41767

Closed
opened 2014-09-10 12:48:10 +02:00 by Dun Liang · 7 comments

System Information
win7 64bit

Blender Version
the latest commit

Short description of error
Memory free problem when console area copy fail

Exact steps for others to reproduce the error

  1. run blender with -d -con options
  $ blender -d -con
  1. switch to scripting layout and drag the console area handle as shown below

1.png

console shows areas don't share edge

  1. close blender, and blender console shows :
  areas don't share edge
  Saved session recovery to 'C:\Users\CJLD\AppData\Local\Temp\quit.blend'
  Error: Not freed memory blocks: 1
  DynStr len: 24 000000000BD2C3B8
  Blender quit
  Press any key to exit . . .

I write a tiny diff and fix it successfully, it might help :)
conbug.diff

**System Information** win7 64bit **Blender Version** the latest commit **Short description of error** Memory free problem when console area copy fail **Exact steps for others to reproduce the error** 1. run blender with `-d -con` options ``` $ blender -d -con ``` 2. switch to scripting layout and drag the console area handle as shown below ![1.png](https://archive.blender.org/developer/F109750/1.png) console shows `areas don't share edge` 3. close blender, and blender console shows : ``` areas don't share edge Saved session recovery to 'C:\Users\CJLD\AppData\Local\Temp\quit.blend' Error: Not freed memory blocks: 1 DynStr len: 24 000000000BD2C3B8 ``` ``` Blender quit Press any key to exit . . . ``` I write a tiny diff and fix it successfully, it might help :) [conbug.diff](https://archive.blender.org/developer/F109753/conbug.diff)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @randon

Added subscriber: @randon

This issue was referenced by 20d6b792a4

This issue was referenced by 20d6b792a49fe0693e6ebfb05bbec3ce4d2b3930

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 20d6b792a4.

Closed by commit 20d6b792a4.

Added subscriber: @mont29

Added subscriber: @mont29

Thanks for the patch! :)

Thanks for the patch! :)
Bastien Montagne self-assigned this 2014-09-10 13:16:56 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41767
No description provided.