Fix T41767: Memory free problem when console area copy fail.

Nice little memleak!

Patch by reporter (randon (Dun Liang)) with minor own cleanup, thanks!